--- a/PoeHideoutCalc/public/style.css
+++ b/PoeHideoutCalc/public/style.css
@@ -25,6 +25,11 @@ body {
   margin-top: 30px;
 }
 
+.separator {
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
 #outer-container {
   margin-left: auto;
   margin-right: auto;
